[package]
name = "meater"
version = "0.1.0"
edition = "2021"

[features]
default = ["device"]
host = ["dep:embedded-graphics-simulator"]
device = ["dep:rppal", "dep:sh1106"]

[dependencies]
anyhow = "1.0.75"
btleplug = "0.11.3"
dbus = { version = "0.9.7", features = ["vendored"] }
embedded-graphics = "0.8.1"
embedded-graphics-simulator = { version = "0.5.0", optional = true }
futures = "0.3.29"
profont = "0.7.0"
rppal = { version = "0.15.0", features = ["hal"], optional = true }
sh1106 = { version = "0.5.0", optional = true }
tinybmp = "0.5.0"
tokio = { version = "1.34.0", features = ["macros", "rt", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.6.1"
