[package]
name = "meater"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
btleplug = "0.11.3"
dbus = { version = "0.9.7", features = ["vendored"] }
embedded-graphics = "0.8.1"
futures = "0.3.29"
rppal = { version = "0.22.1", features = ["hal"] }
sh1106 = "0.5.0"
tinybmp = { git = "https://github.com/embedded-graphics/tinybmp" }
tokio = { version = "1.34.0", features = ["rt", "macros"] }
tokio-util = "0.7.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.6.1"

[profile.release]
codegen-units = 1
lto = true
